--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.7.1",
     "react-scripts": "2.1.1",
     "styled-components": "^4.1.2"
   },
